--- a/assignment1.html
+++ b/assignment1.html
@@ -46,6 +46,10 @@ Address
 <input type="checkbox" name="cultural" value="Cultural">
 <br>
 <br>
+    <lable>City</label>
+    <select>
+        <option>arusha</option>
+    </select>
 <hr/>
 <input type="Submit">
 <input type="Reset">
