--- a/assignment1.html
+++ b/assignment1.html
@@ -5,7 +5,7 @@
 
 <body>
 
-<form action="" method="post" style="text-align:right">
+<form action="" method="post" style="text-align:right background-color:blue">
 <fieldset>
 <label style="text-align:left">Enter your details</style></label>
 Name
