--- a/assignment1.html
+++ b/assignment1.html
@@ -49,6 +49,7 @@ Address
     <lable>City</label>
     <select>
         <option>arusha</option>
+        <option>dar es salaam</option>
     </select>
 <hr/>
 <input type="Submit">
