--- a/login_form.html
+++ b/login_form.html
@@ -30,6 +30,7 @@ Username:<input type="text" name="username" placeholder="Enter Username" require
 Password:<input type="password" name="password" placeholder="Enter Password" required>
 <br>
 <br>
+  confirm_password:<input type="text">
 <button type="submit" name="login" style="background-color:white;
 color:black;border:2px solid #008CBA;border-radius:4px">Login</button>
 <br>
